Fix logo cut off on login screen (#1896)

--- a/src/Ombi/ClientApp/app/login/login.component.scss
+++ b/src/Ombi/ClientApp/app/login/login.component.scss
@@ -87,9 +87,6 @@ div.bg {
     width: 100%;
     margin: 0 auto 10px;
     display: block;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
 }
 /*
  * Form styles
